--- a/src/components/Auth/styles/auth.scss
+++ b/src/components/Auth/styles/auth.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-shadow: 0 1px 2px black;
   background: linear-gradient(
       to top,
       rgba(0, 0, 0, 0.8) 0,
@@ -14,45 +15,180 @@
     url("https://assets.nflxext.com/ffe/siteui/vlv3/757ab38f-5d08-40bc-b3eb-eaba63ed8203/93c34f94-56c8-40a7-8b2e-b4aac6427977/GB-en-20210125-popsignuptwoweeks-perspective_alpha_website_medium.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  .innerAuth {
-    text-shadow: 0 1px 2px black;
-    h1 {
-      font-size: 3em;
+  h1 {
+    font-size: 3em;
+  }
+  h2 {
+    font-weight: 500;
+  }
+  h3 {
+    font-weight: 500;
+  }
+  form {
+    display: flex;
+    width: 70% !important;
+    margin: 0 auto;
+    justify-content: center;
+    input {
+      outline: 0;
+      border: none;
+      max-height: 30px;
+      border-radius: 0;
+      padding: 0.55em 1em;
+      width: 65% !important;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+      transition: var(--transition);
     }
-    h2 {
-      font-weight: 500;
-    }
-    h3 {
-      font-weight: 500;
-    }
-    form {
+    button {
+      width: 30% !important;
+      padding: 0.55em 1em;
+      color: var(--silver) !important;
+      border-radius: 0 !important;
+      background: var(--main) !important;
+      border-top-right-radius: 4px !important;
+      border-bottom-right-radius: 4px !important;
       display: flex;
-      width: 70% !important;
-      margin: 0 auto;
-      justify-content: center;
-      input {
-        width: 65% !important;
-        outline: 0;
-        padding: 0.55em 1em;
-        border: none;
-        border-radius: 0;
-        border-top-left-radius: 7px;
-        border-bottom-left-radius: 7px;
-        transition: var(--transition);
+      grid-gap: 0.5em;
+      transition: var(--transition);
+      &:hover {
+        color: white !important;
+        background: var(--secondary) !important;
       }
-      button {
-        width: 30% !important;
-        padding: 0.55em 1em;
-        background: var(--main);
-        border-radius: 0;
-        border-top-right-radius: 7px;
-        border-bottom-right-radius: 7px;
-        display: flex;
-        grid-gap: 0.5em;
-        transition: var(--transition);
-        &:hover {
-          background: var(--secondary);
-        }
+    }
+  }
+}
+
+.authHeaderRightSide {
+  .avatar {
+    max-height: 35px !important;
+    border-radius: 5px;
+    margin-left: 20px;
+    width: auto;
+    cursor: pointer;
+    transition: var(--transition);
+    &:hover {
+      filter: grayscale(1) !important;
+    }
+    // filter: hue-rotate(180deg);
+  }
+  .authButton {
+    display: flex;
+    grid-gap: 0.5em;
+    border-radius: 4px;
+    padding: 0.3em 1em;
+    font-family: "montserrat";
+    background: var(--main) !important;
+    color: var(--silver) !important;
+    transition: var(--transition);
+    &:hover {
+      color: var(--silver) !important;
+      background: var(--secondary) !important;
+    }
+  }
+  button {
+    min-height: 35px !important;
+    color: var(--silver) !important;
+    background: var(--main) !important;
+    &:hover {
+      color: white !important;
+      background: var(--secondary) !important;
+    }
+  }
+}
+
+.react-Slidy {
+  width: 100% !important;
+  min-height: 355px !important;
+  height: 100%;
+  div {
+    font-size: 1em !important;
+    ul {
+      width: 100% !important;
+      li {
+        display: inline-block !important;
+        position: relative !important;
+        white-space: pre-wrap !important;
+        vertical-align: middle !important;
+        width: 100% !important;
+      }
+    }
+  }
+}
+
+.sliderElem {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  grid-gap: 1em !important;
+}
+
+.sliderLeft {
+  width: 100% !important;
+}
+
+.sliderRight {
+  width: 100% !important;
+}
+
+.react-Slidy-arrow {
+  margin: auto -3em !important;
+}
+
+.registration {
+  display: flex;
+  position: relative;
+  border-radius: 4px;
+  padding-bottom: 3em;
+  flex-direction: column;
+  width: 60% !important;
+  margin: 0 auto !important;
+  backdrop-filter: blur(5px) !important;
+  background: var(--blackGlass);
+  .backButton {
+    position: absolute;
+    top: 30px;
+    right: 50px;
+    background-color: var(--main);
+    &:hover {
+      color: white !important;
+      background: var(--secondary) !important;
+    }
+  }
+  .authHeader {
+    margin-bottom: 0 !important;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    height: 100% !important;
+    width: 100% !important;
+    grid-gap: 1em;
+    margin: 0 auto !important;
+    justify-content: center !important;
+    input {
+      outline: 0;
+      border: none;
+      max-height: 30px;
+      border-radius: 4px !important;
+      padding: 0.55em 1em;
+      width: 65% !important;
+      margin: 0 auto !important;
+      transition: var(--transition);
+    }
+    button {
+      display: flex;
+      width: 65% !important;
+      grid-gap: 0.5em;
+      padding: 0.55em 1em;
+      margin: 0 auto !important;
+      color: var(--silver) !important;
+      border-radius: 4px !important;
+      background: var(--main) !important;
+      transition: var(--transition);
+      &:hover {
+        color: white !important;
+        background: var(--secondary) !important;
       }
     }
   }
