--- a/src/components/Header/styles/header.css
+++ b/src/components/Header/styles/header.css
@@ -36,14 +36,10 @@ header .inner {
   width: 93%;
 }
 
-header .inner .customAvatar {
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-header .inner .customAvatar:hover {
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+header .inner .logo {
+  max-width: 100px;
+  height: auto;
+  margin-right: 10px;
 }
 
 header .inner .navigation {
@@ -66,35 +62,14 @@ header .inner .navigation ul {
   transition: var(--transition);
 }
 
-header .inner .navigation ul .authButton {
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-header .inner .navigation ul .authButton button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  grid-gap: 0.5em;
-  padding: 0.3em 1em;
-  font-family: "montserrat";
-  border-radius: 7px;
-  background: var(--main);
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-header .inner .navigation ul .authButton button:hover {
-  background: var(--secondary);
-}
-
 header .inner .navigation ul li:not(.right) {
   margin-left: 20px;
   text-decoration: none;
   font-family: "Montserrat";
-  color: #f2f2f2;
-  -webkit-transition: 0.3s ease-in-out !important;
-  transition: 0.3s ease-in-out !important;
+  color: var(--silver);
+  cursor: pointer;
+  -webkit-transition: var(--transition) !important;
+  transition: var(--transition) !important;
 }
 
 header .inner .navigation ul li:not(.right):hover {
@@ -104,20 +79,59 @@ header .inner .navigation ul li:not(.right):hover {
 header .inner .navigation ul li:not(.right) a {
   text-decoration: none;
   cursor: pointer;
+  font-weight: 600;
   font-family: "Montserrat";
-  color: #f2f2f2;
-  -webkit-transition: 0.3s ease-in-out !important;
-  transition: 0.3s ease-in-out !important;
+  color: var(--silver);
+  -webkit-transition: var(--transition) !important;
+  transition: var(--transition) !important;
 }
 
 header .inner .navigation ul li:not(.right) a:hover {
   color: white;
 }
 
-header .inner .navigation .logo {
-  max-width: 100px;
-  height: auto;
-  margin-right: 10px;
+header .inner button {
+  color: var(--silver) !important;
+  -webkit-backdrop-filter: none !important;
+          backdrop-filter: none !important;
+  background: transparent !important;
+  text-transform: capitalize !important;
+}
+
+header .inner button:hover {
+  color: var(--bg) !important;
+  background: white !important;
+}
+
+header .inner .search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+header .inner .search .searchButton {
+  padding: 0 !important;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  min-width: 30px !important;
+  max-width: 30px !important;
+  grid-gap: 0.5em !important;
+  padding: 0.5rem 2rem 0.5rem 2rem;
+  -webkit-box-pack: center !important;
+      -ms-flex-pack: center !important;
+          justify-content: center !important;
+  -webkit-box-align: center !important;
+      -ms-flex-align: center !important;
+          align-items: center !important;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
 }
 
 header .inner .user {
@@ -128,18 +142,42 @@ header .inner .user {
       -ms-flex-align: center;
           align-items: center;
   position: relative;
-  margin-left: 12px !important;
   -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 
-header .inner .user .avatar {
-  max-height: 35px;
-  border-radius: 5px;
+header .inner .user .customAvatar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 4px !important;
+  font-weight: 600;
+  font-size: 1em;
+  margin: 0 auto;
   margin-left: 20px;
-  width: auto;
+  color: var(--silver);
+  background: var(--main);
   -webkit-transition: var(--transition);
   transition: var(--transition);
+}
+
+header .inner .user .customAvatar .avatarLetter {
+  -webkit-transition: var(--transition) !important;
+  transition: var(--transition) !important;
+}
+
+header .inner .user .customAvatar:hover {
+  color: var(--bg) !important;
+  background: var(--silver) !important;
 }
 
 header .inner .user .caret {
@@ -153,21 +191,21 @@ header .inner .user .caret {
       -ms-flex-align: center;
           align-items: center;
   margin-left: 10px;
-  -webkit-transition: 0.5s ease-in-out !important;
-  transition: 0.5s ease-in-out !important;
+  -webkit-transition: 1s cubic-bezier(0.77, 0.2, 0.05, 1) !important;
+  transition: 1s cubic-bezier(0.77, 0.2, 0.05, 1) !important;
 }
 
 header .inner .user .logout {
   opacity: 0;
   position: absolute;
-  top: 50px;
-  left: 0;
-  width: 100%;
+  top: 74px;
+  right: 0;
+  width: 254.19px;
   height: 100%;
   padding: 4em 1em;
-  border-radius: 7px;
+  border-radius: 4px;
   -webkit-backdrop-filter: blur(3px);
-          backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
   background: var(--blackGlass);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -193,22 +231,29 @@ header .inner .user .logout p {
 }
 
 header .inner .user .logout .logoutButton {
-  padding: 0.5em 2em;
-  background: var(--main);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   grid-gap: 0.5em;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
+  max-height: none;
+  padding: 0.5em 2em !important;
+  color: var(--bg) !important;
+  background: var(--silver) !important;
 }
 
 header .inner .user .logout .logoutButton:hover {
-  background: var(--secondary);
+  background: var(--main) !important;
+  color: var(--silver) !important;
 }
 
-header .inner .user:hover {
-  cursor: pointer;
+header .inner .user:hover .customAvatar {
+  color: var(--bg) !important;
+  background: var(--silver) !important;
+}
+
+header .inner .user:hover .customAvatar:hover {
+  background: var(--main) !important;
+  color: var(--silver) !important;
 }
 
 header .inner .user:hover .logout {
@@ -226,25 +271,26 @@ header .inner .user:hover .caret i {
           backdrop-filter: blur(5px);
 }
 
-.customAvatar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 35px;
-  height: 35px;
-  border-radius: 7px;
-  font-size: 18px;
-  margin: 0 auto;
-  background: var(--main);
-  cursor: pointer;
-  margin-left: 20px;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
+.scrolledHeader .customAvatar {
+  color: var(--bg) !important;
+  background: var(--silver) !important;
+}
+
+.scrolledHeader .customAvatar:hover {
+  color: white !important;
+  background: var(--main) !important;
+}
+
+.scrolledHeader .dash button {
+  -webkit-backdrop-filter: none !important;
+          backdrop-filter: none !important;
+  text-transform: capitalize !important;
+  color: var(--bg) !important;
+  background: var(--silver) !important;
+}
+
+.scrolledHeader .dash button:hover {
+  color: white !important;
+  background: var(--mainGlass) !important;
 }
 /*# sourceMappingURL=header.css.map */
