--- a/src/components/Row/styles/row.scss
+++ b/src/components/Row/styles/row.scss
@@ -6,6 +6,29 @@
     text-align: left;
     font-weight: 500;
     font-size: 1.3em;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    grid-gap: 1em;
+    .index {
+      font-weight: 700;
+      font-family: "montserrat" !important;
+      color: var(--silver);
+      background: var(--mainGlass);
+      border-radius: 100px;
+      font-size: 0.85em !important;
+      min-height: 14px;
+      min-width: 14px;
+      display: flex !important;
+      justify-content: center;
+      align-items: center !important;
+      transition: var(--transition);
+      .indexNumber {
+        top: 0;
+        bottom: 0;
+        position: relative;
+      }
+    }
   }
   &:last-child {
     margin-bottom: 3em;
