--- a/src/components/Dashboard/styles/dashboard.css
+++ b/src/components/Dashboard/styles/dashboard.css
@@ -15,17 +15,35 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 69% !important;
+  width: 75% !important;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.dashboard .index {
+  font-weight: 700;
+  font-family: "montserrat" !important;
+  color: var(--silver);
+  background: var(--mainGlass);
+  border-radius: 100px;
+  font-size: 0.85em !important;
+  min-height: 14px;
+  min-width: 14px;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center !important;
+      -ms-flex-align: center !important;
+          align-items: center !important;
   -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 
 .dashboard .dashboardInner {
-  padding: 3em;
-  background: var(--blackGlass);
-  -webkit-backdrop-filter: blur(3px);
-          backdrop-filter: blur(3px);
-  border-radius: 7px;
+  border-radius: 4px;
   display: -webkit-box !important;
   display: -ms-flexbox !important;
   display: flex !important;
@@ -35,21 +53,9 @@
           flex-direction: column;
   width: 100% !important;
   margin: 0 auto;
+  overflow: auto;
   -webkit-transition: var(--transition);
   transition: var(--transition);
-}
-
-.dashboard .dashboardInner .userNameColumn {
-  margin-bottom: 0.5em;
-  border-bottom: 3px solid var(--main);
-  display: inline-block;
-  padding: 0.5em 0.5em;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.dashboard .dashboardInner .userNameColumn:hover {
-  color: white;
 }
 
 .dashboard .dashboardInner .dashboardRow {
@@ -78,7 +84,6 @@
           align-items: center;
   grid-gap: 0.35em;
   padding: 0.35em;
-  width: 100% !important;
   font-size: 0.85em;
   -webkit-transition: var(--transition);
   transition: var(--transition);
@@ -86,27 +91,6 @@
 
 .dashboard .dashboardInner .dashboardRow .titleField i {
   color: var(--mainGlass);
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.dashboard .dashboardInner .dashboardRow .titleField .index {
-  font-weight: 800;
-  color: var(--bg);
-  background: var(--mainGlass);
-  border-radius: 100px;
-  font-size: 0.85em;
-  min-height: 17px;
-  min-width: 17px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-transition: var(--transition);
   transition: var(--transition);
 }
@@ -120,18 +104,11 @@
 }
 
 .dashboard .dashboardInner .dashboardRow:hover span .index {
-  background: var(--main);
+  background: var(--main) !important;
   color: white !important;
-  font-weight: 700;
 }
 
 .dashboard .dashboardInner .dashboardRow:hover span:hover .index {
-  background: white;
-  color: var(--main) !important;
-  font-weight: 900;
-}
-
-.dashboard .dashboardInner .dashboardRow:hover span:hover i {
   color: white !important;
 }
 
@@ -160,49 +137,8 @@
   color: var(--silver) !important;
 }
 
-.buttons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  grid-gap: 1em;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.buttons button {
-  cursor: pointer;
-  border: none;
-  outline: none;
-  font-weight: 500;
-  border-radius: 0.3vw;
-  padding: 0.5rem 2rem 0.5rem 2rem;
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center !important;
-      -ms-flex-align: center !important;
-          align-items: center !important;
-  grid-gap: 0.5em;
-  font-size: 1em;
-  color: black;
-  background: #f2f2f2;
-  text-transform: uppercase;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.buttons button:hover {
-  color: white;
-  background: var(--bg);
-}
-
 .list {
   position: relative !important;
-  -webkit-transition: var(--transition) !important;
-  transition: var(--transition) !important;
 }
 
 .listItems {
@@ -226,9 +162,7 @@
   height: 19.5px;
   padding: 0.5em;
   border-radius: 100%;
-  background: var(--mainGlass);
-  -webkit-transition: var(--transition) !important;
-  transition: var(--transition) !important;
+  background: var(--main);
 }
 
 ul {
@@ -245,33 +179,10 @@ ul {
   transition: var(--transition);
 }
 
-ul .authButton {
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-ul .authButton button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  grid-gap: 0.5em;
-  padding: 0.3em 1em;
-  font-family: "montserrat";
-  border-radius: 7px;
-  background: var(--main);
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-ul .authButton button:hover {
-  background: var(--secondary);
-}
-
 ul li:not(.right) {
-  margin-left: 20px;
   text-decoration: none;
   font-family: "Montserrat";
-  color: #f2f2f2;
+  color: var(--silver);
   -webkit-transition: var(--transition) !important;
   transition: var(--transition) !important;
 }
@@ -298,48 +209,8 @@ ul li {
   transition: var(--transition) !important;
 }
 
-ul li .buttonText {
-  -webkit-transition: var(--transition) !important;
-  transition: var(--transition) !important;
-}
-
 ul.dash {
-  grid-gap: 0.325em;
-  -webkit-transition: var(--transition) !important;
-  transition: var(--transition) !important;
-}
-
-.iconButton {
-  color: white;
-  font-size: 1.2em;
-  font-weight: 500 !important;
-  padding: 0 1em !important;
-  margin: 0 !important;
-  min-width: 35px !important;
-  min-height: 35px !important;
-  background: var(--authGlass);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  min-width: 0;
-  -webkit-backdrop-filter: blur(3px);
-          backdrop-filter: blur(3px);
-  -webkit-transition: var(--transition) !important;
-  transition: var(--transition) !important;
-}
-
-.iconButton .listIcon {
-  -webkit-transition: var(--transition) !important;
-  transition: var(--transition) !important;
-}
-
-.iconButton .listIcon .indexCircle {
+  grid-gap: 20px;
   -webkit-transition: var(--transition) !important;
   transition: var(--transition) !important;
 }
@@ -353,9 +224,52 @@ ul.dash {
   background: var(--secondary) !important;
 }
 
-.buttonText {
-  text-transform: uppercase !important;
-  -webkit-transition: var(--transition) !important;
-  transition: var(--transition) !important;
+.name {
+  width: 67% !important;
+}
+
+.date {
+  width: 30% !important;
+}
+
+.votes,
+.rating {
+  width: 15% !important;
+}
+
+.delete {
+  width: 38% !important;
+}
+
+.titleRowName .index {
+  color: var(--silver) !important;
+  font-size: 15px !important;
+  width: 20px !important;
+  height: 20px !important;
+  min-width: 20px !important;
+  max-width: 20px !important;
+  min-height: 20px !important;
+  margin: 0.45em 0;
+}
+
+.titleRowName .index .indexNumber {
+  bottom: -4px;
+  position: relative;
+}
+
+.delete .index {
+  color: var(--silver) !important;
+  font-size: 15px !important;
+  width: 20px !important;
+  height: 20px !important;
+  min-width: 20px !important;
+  max-width: 20px !important;
+  min-height: 20px !important;
+  margin: 0.45em 0;
+}
+
+.delete .index .indexNumber {
+  bottom: -4px;
+  position: relative;
 }
 /*# sourceMappingURL=dashboard.css.map */
