--- a/src/components/TopButton/styles/topButton.css
+++ b/src/components/TopButton/styles/topButton.css
@@ -14,24 +14,32 @@ body {
   bottom: 60px;
   right: 30px;
   z-index: 99;
-  outline: none !important;
-  background: var(--mainGlass);
-  border: none !important;
-  color: var(--silver);
-  cursor: pointer;
-  padding: 10px 15px !important;
-  border-radius: 7px;
   font-size: 20px;
-  font-family: "montserrat" !important;
-  font-weight: 700;
+  cursor: pointer;
+  border-radius: 4px;
+  margin: 0 !important;
+  outline: none !important;
+  border: none !important;
   -webkit-transform: rotate(-90deg);
           transform: rotate(-90deg);
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  padding: 0 1em !important;
+  min-width: 35px !important;
+  min-height: 35px !important;
+  font-weight: 700 !important;
+  color: var(--silver) !important;
+  font-family: "montserrat" !important;
   -webkit-animation: fadeIn 1000ms ease-in-out;
           animation: fadeIn 1000ms ease-in-out;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
+  background: var(--mainGlass) !important;
+  -webkit-transition: var(--transition) !important;
+  transition: var(--transition) !important;
+}
+
+#topButton .upArrow {
+  -webkit-transition: var(--transition) !important;
+  transition: var(--transition) !important;
 }
 
 #topButton:active {
@@ -39,23 +47,16 @@ body {
   -webkit-box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.8);
           box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.8);
   color: var(--main);
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
 }
 
 #topButton:hover {
-  background-color: var(--secondary);
-  border-color: var(--main);
-  color: #fff;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
+  background: var(--silver) !important;
+  color: var(--bg) !important;
 }
 
 #topButton:hover::before {
   -webkit-transform: scale(1, 1);
           transform: scale(1, 1);
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
 }
 
 #topButton::before {
