--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -7,15 +7,12 @@
 :root {
   --piratechs: #2b4261;
   --main: #ff1c0b;
-  --junior: #09589c;
-  --fullStack: #ff1c0b;
-  // --silver: #c5c5c5; // Silver
-  --silver: #d8d8d8;
-  --secondary: #3c3c3c;
   --bg: #1f1f1f;
-  // --mainGlass: rgba(255, 28, 11, 0.6);
+  --silver: #f2f2f2;
+  --secondary: #3c3c3c;
   --mainGlass: rgba(255, 28, 11, 0.75);
   --blackGlass: rgba(0, 0, 0, 0.75);
+  --silverGlass: rgba(0, 0, 0, 0.35);
   --authGlass: rgba(0, 0, 0, 0.05);
   --transition: 0.24s cubic-bezier(0.77, 0.2, 0.05, 1) !important;
 }
@@ -39,6 +36,10 @@ iframe {
 .show {
   opacity: 1;
   transition: var(--transition);
+}
+.sep {
+  color: var(--main);
+  font-weight: 600;
 }
 
 .none {
@@ -66,7 +67,8 @@ body {
   font-family: "Montserrat" !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  overflow: auto !important;
+  overflow-x: hidden !important;
   background: black;
   min-height: 100vh;
   // transition: var(--transition);
@@ -158,18 +160,18 @@ main {
         outline: 0;
         padding: 0.55em 1em;
         border: none;
-        border-radius: 0;
-        border-top-left-radius: 7px;
-        border-bottom-left-radius: 7px;
+        border-radius: 4px;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
         transition: var(--transition);
       }
       button {
         width: 30% !important;
         padding: 0.55em 1em;
         background: var(--main);
-        border-radius: 0;
-        border-top-right-radius: 7px;
-        border-bottom-right-radius: 7px;
+        border-radius: 4px;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
         display: flex;
         grid-gap: 0.5em;
         transition: var(--transition);
@@ -205,11 +207,41 @@ main {
   }
 }
 
-button {
+.buttons {
+  display: flex;
+  grid-gap: 20px;
+  height: 100%;
+  align-items: center;
   transition: var(--transition);
-  &:not(.iconButton) {
-    transition: var(--transition);
-    padding: 0.375em 2em !important;
+}
+
+button {
+  border: none;
+  outline: none;
+  display: flex;
+  cursor: pointer;
+  grid-gap: 0.5em;
+  min-height: 30px;
+  max-height: 30px;
+  border-radius: 4px;
+  align-items: center;
+  margin: 0 !important;
+  justify-content: center;
+  font-size: 1em !important;
+  padding: 0 1em !important;
+  color: var(--bg) !important;
+  backdrop-filter: blur(5px);
+  font-weight: 500 !important;
+  text-transform: uppercase !important;
+  background: var(--silver) !important;
+  transition: var(--transition);
+  i {
+    font-size: 14px !important;
+    transition: var(--transition) !important;
+  }
+  &:hover {
+    color: white !important;
+    background: var(--silverGlass) !important;
   }
 }
 
@@ -237,7 +269,7 @@ div[role="presentation"] {
   position: relative;
   transition: var(--transition);
   &::before {
-    content: "";
+    content: "" !important;
     background: var(--main);
     position: absolute;
     width: 100%;
@@ -245,7 +277,7 @@ div[role="presentation"] {
     display: block;
     bottom: -3px;
     right: 0;
-    z-index: -100;
+    z-index: 0;
     transform-origin: 0% 100%;
     transform: scale(0, 1);
     transition: var(--transition);
@@ -262,16 +294,16 @@ div[role="presentation"] {
 ::-webkit-scrollbar {
   display: none;
   height: 10px;
-  background: rgb(31, 31, 31);
+  background: var(--bg);
   transition: var(--transition);
 }
 
 ::-webkit-scrollbar-thumb {
   background: var(--secondary);
-  border-radius: 0px;
-  transition: 0.3s ease-in-out;
+  border-radius: 4px;
+  transition: var(--transition);
   &:hover {
-    background: rgb(77, 77, 77);
+    background: var(--secondary);
   }
 }
 
